welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:10: error: not found: value to
		for(k<- to nbPas)
                        ^